outputs_20260328-212505-894b4386/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/Ifx_Types.h:3,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\src\egtm_atom_3_phase_inverter_pwm.c:15:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/mock_egtm_atom_3_phase_inverter_pwm.h:288:8: error: unknown type name 'Ifx_PFRWB5A'; did you mean 'Ifx_PFRWB4A'?
  288 | extern Ifx_PFRWB5A MODULE_PFRWB5A;
      |        ^~~~~~~~~~~
      |        Ifx_PFRWB4A
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/mock_egtm_atom_3_phase_inverter_pwm.h:290:8: error: unknown type name 'Ifx_PFRWB5B'; did you mean 'Ifx_PFRWB4B'?
  290 | extern Ifx_PFRWB5B MODULE_PFRWB5B;
      |        ^~~~~~~~~~~
      |        Ifx_PFRWB4B
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/IfxEgtm_Pwm.h:7,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\src\egtm_atom_3_phase_inverter_pwm.c:16:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/IfxPort.h:72:5: error: unknown type name 'IfxPort_PadDriver'
   72 |     IfxPort_PadDriver padDriver;
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/IfxPort.h:75:32: error: conflicting types for 'IfxApApu_ApuConfig'; have 'struct <anonymous>'
   75 | typedef struct { uint32 raw; } IfxApApu_ApuConfig; /* minimal */
      |                                ^~~~~~~~~~~~~~~~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/IfxEgtm_Pwm.h:5:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/IfxEgtm.h:10:32: note: previous declaration of 'IfxApApu_ApuConfig' with type 'IfxApApu_ApuConfig'
   10 | typedef struct { uint32 raw; } IfxApApu_ApuConfig;
      |                                ^~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/IfxPort.h:87:32: error: conflicting types for 'IfxApProt_ProtConfig'; have 'struct <anonymous>'
   87 | typedef struct { uint32 raw; } IfxApProt_ProtConfig; /* minimal */
      |                                ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/IfxEgtm.h:11:32: note: previous declaration of 'IfxApProt_ProtConfig' with type 'IfxApProt_ProtConfig'
   11 | typedef struct { uint32 raw; } IfxApProt_ProtConfig;
      |                                ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\src\egtm_atom_3_phase_inverter_pwm.c: In function 'initEgtmAtom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\src\egtm_atom_3_phase_inverter_pwm.c:147:26: error: 'IfxSrc_VmId_0' undeclared (first use in this function); did you mean 'IfxSrc_VmId'?
  147 |     irqCfg.vmId        = IfxSrc_VmId_0;
      |                          ^~~~~~~~~~~~~
      |                          IfxSrc_VmId
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\src\egtm_atom_3_phase_inverter_pwm.c:147:26: note: each undeclared identifier is reported only once for each function it appears in
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\src\egtm_atom_3_phase_inverter_pwm.c:180:33: error: 'IfxEgtm_Cluster_0' undeclared (first use in this function); did you mean 'IfxEgtm_Cluster'?
  180 |     config.cluster            = IfxEgtm_Cluster_0;                 /* Match ATOM0 pin selection */
      |                                 ^~~~~~~~~~~~~~~~~
      |                                 IfxEgtm_Cluster

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:1:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/mock_egtm_atom_3_phase_inverter_pwm.h:288:8: error: unknown type name 'Ifx_PFRWB5A'; did you mean 'Ifx_PFRWB4A'?
  288 | extern Ifx_PFRWB5A MODULE_PFRWB5A;
      |        ^~~~~~~~~~~
      |        Ifx_PFRWB4A
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/mock_egtm_atom_3_phase_inverter_pwm.h:290:8: error: unknown type name 'Ifx_PFRWB5B'; did you mean 'Ifx_PFRWB4B'?
  290 | extern Ifx_PFRWB5B MODULE_PFRWB5B;
      |        ^~~~~~~~~~~
      |        Ifx_PFRWB4B
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/IfxEgtm_Pwm.h:7,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:4:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/IfxPort.h:72:5: error: unknown type name 'IfxPort_PadDriver'
   72 |     IfxPort_PadDriver padDriver;
      |     ^~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/IfxPort.h:75:32: error: conflicting types for 'IfxApApu_ApuConfig'; have 'struct <anonymous>'
   75 | typedef struct { uint32 raw; } IfxApApu_ApuConfig; /* minimal */
      |                                ^~~~~~~~~~~~~~~~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:2:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/IfxEgtm.h:10:32: note: previous declaration of 'IfxApApu_ApuConfig' with type 'IfxApApu_ApuConfig'
   10 | typedef struct { uint32 raw; } IfxApApu_ApuConfig;
      |                                ^~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/IfxPort.h:87:32: error: conflicting types for 'IfxApProt_ProtConfig'; have 'struct <anonymous>'
   87 | typedef struct { uint32 raw; } IfxApProt_ProtConfig; /* minimal */
      |                                ^~~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/IfxEgtm.h:11:32: note: previous declaration of 'IfxApProt_ProtConfig' with type 'IfxApProt_ProtConfig'
   11 | typedef struct { uint32 raw; } IfxApProt_ProtConfig;
      |                                ^~~~~~~~~~~~~~~~~~~~

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\test\test_egtm_atom_3_phase_inverter_pwm.c:2:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/mock_egtm_atom_3_phase_inverter_pwm.h:288:8: error: unknown type name 'Ifx_PFRWB5A'; did you mean 'Ifx_PFRWB4A'?
  288 | extern Ifx_PFRWB5A MODULE_PFRWB5A;
      |        ^~~~~~~~~~~
      |        Ifx_PFRWB4A
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\include/mock_egtm_atom_3_phase_inverter_pwm.h:290:8: error: unknown type name 'Ifx_PFRWB5B'; did you mean 'Ifx_PFRWB4B'?
  290 | extern Ifx_PFRWB5B MODULE_PFRWB5B;
      |        ^~~~~~~~~~~
      |        Ifx_PFRWB4B
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\test\test_egtm_atom_3_phase_inverter_pwm.c: In function 'test_TC_G6_002_after_wrap_post_step_value_equals_step_for_each_phase':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\test\test_egtm_atom_3_phase_inverter_pwm.c:297:5: error: unknown type name 'bool'
  297 |     bool wrappedSeen[3] = { false, false, false };
      |     ^~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\test\test_egtm_atom_3_phase_inverter_pwm.c:4:1: note: 'bool' is defined in header '<stdbool.h>'; this is probably fixable by adding '#include <stdbool.h>'
    3 | #include "egtm_atom_3_phase_inverter_pwm.h"
  +++ |+#include <stdbool.h>
    4 | 
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\test\test_egtm_atom_3_phase_inverter_pwm.c:297:29: error: 'false' undeclared (first use in this function)
  297 |     bool wrappedSeen[3] = { false, false, false };
      |                             ^~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\test\test_egtm_atom_3_phase_inverter_pwm.c:297:29: note: 'false' is defined in header '<stdbool.h>'; this is probably fixable by adding '#include <stdbool.h>'
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\test\test_egtm_atom_3_phase_inverter_pwm.c:297:29: note: each undeclared identifier is reported only once for each function it appears in
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\test\test_egtm_atom_3_phase_inverter_pwm.c:314:34: error: 'true' undeclared (first use in this function)
  314 |                 wrappedSeen[i] = true;
      |                                  ^~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_e84arwxb\test\test_egtm_atom_3_phase_inverter_pwm.c:314:34: note: 'true' is defined in header '<stdbool.h>'; this is probably fixable by adding '#include <stdbool.h>'
